--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <h2 class="text-center w-100 p-3">A kajak-kenu történetének kezdetei Magyarországon</h2>
         </div>
         <div class="row">
-            <div class="col-md-3"><img src="img/mult1.jpg" alt="fotó helye"></div>
+            <div class="col-md-3"><img class="img-fluid" src="img/mult1.jpg" alt="fotó helye"></div>
             <div class="col-md-6">
                 <p class="text-justify">Az első magyar írásos forrás Széchenyi István gróf tollából származik. 1818-ban,
                     törökországi útja során találkozott a tengerészek által használt „kajik” elnevezésű vízi
@@ -44,7 +44,7 @@
                     előképének.
                 </p>
             </div>
-            <div class="col-md-3"><img src="img/mult2.jpg" alt="fotó helye"></div>
+            <div class="col-md-3"><img class="img-fluid" src="img/mult2.jpg" alt="fotó helye"></div>
         </div>
     </section>
 
@@ -52,24 +52,24 @@
         <h2 class="p-3">Akikre büszkék vagyunk...</h2>
         <div class="row">
             <div class="col-md-6">
-                <img class="kep" src="./img/karasz_anna.jpg" alt="Kárász Anna" title="Kárász Anna">
+                <img class="kep img-fluid" src="./img/karasz_anna.jpg" alt="Kárász Anna" title="Kárász Anna">
                 <h4>Kárász Anna</h4>
             </div>
 
             <div class="col-md-6">
-                <img class="kep" src="img/kopasz_balint.jpeg" alt="Kopasz Bálint" title="Kopasz Bálint">
+                <img class="kep img-fluid" src="img/kopasz_balint.jpeg" alt="Kopasz Bálint" title="Kopasz Bálint">
                 <h4>Kopasz Bálint</h4>
             </div>
         </div>
 
         <div class="row">
             <div class="col-md-6">
-                <img class="kep" src="img/medveczky_erika.jpg" alt="Medveczky Erika" title="Medveczky Erika">
+                <img class="kep img-fluid" src="img/medveczky_erika.jpg" alt="Medveczky Erika" title="Medveczky Erika">
                 <h4>Zsivoczky-Medveczky Erika</h4>
             </div>
 
             <div class="col-md-6">
-                <img class="kep" src="img/dombi_rudolf.jpg   " alt="Dombi Rudolf" title="Dombi Rudolf">
+                <img class="kep img-fluid" src="img/dombi_rudolf.jpg   " alt="Dombi Rudolf" title="Dombi Rudolf">
                 <h4>Dombi Rudolf </h4>
             </div>
         </div>
